--- a/rapport/PSAR_PSTL.lyx
+++ b/rapport/PSAR_PSTL.lyx
@@ -1329,7 +1329,8 @@ Architecture logicielle
 Dans cette partie, nous ne parlerons pas de façon détaillée de l’implémentation
  : en effet, cette dernière est déjà amplement commentée et documentée dans
  le code source du projet.
- De même, la documentation utilisateur est contenue dans le README du projet.
+ De même, la documentation utilisateur est contenue dans le README du projet
+ [ Dépôt : https://gitlab.com/Vonstrab/audio-graph-parallelization ].
 \end_layout
 
 \begin_layout Standard
@@ -2254,6 +2255,8 @@ Finalement le losange qui se trouve entre les deux, il s'agit d'un DAG qui
  On s'attend que l’exécution séquentielle soit plus efficace sur les petits
  losanges, mais que le gain de la parallélisation soit significatif sur
  les plus grands.
+ Cette configuration se veut proche des cas rencontrées dans la vie réelle.
+ 
 \begin_inset Float figure
 wide false
 sideways false
@@ -2286,10 +2289,6 @@ Exemples de Losange avec 16 nœuds
 \end_inset
 
 
-\end_layout
-
-\begin_layout Standard
-[Expliquer les mesures faites]
 \end_layout
 
 \begin_layout Subsection*
@@ -2955,6 +2954,9 @@ Secondement en observant les temps moyens et les pires temps pour la ligne,
 \begin_layout Standard
 Pour le Losange on note l'irrégularité de HLFET qui détonne par rapport
  aux trois autres méthodes.
+ Dans cette configuration on voit que les 4 cœurs ne font pas perdre tant
+ de performances que ça, juste un légère augmentation du nombre de deadlines
+ rates.
 \end_layout
 
 \begin_layout Subsection*
@@ -3596,6 +3598,12 @@ Dernière variable: la charge de la machine
 \end_layout
 
 \begin_layout Standard
+Dans cette série de mesures on va fier le buffer a 128, le nombre de threads
+ a 3 et on va comparer l'éxécution entre la machine au repos et la machine
+ qui lit une vidéo en haute qualité.
+\end_layout
+
+\begin_layout Standard
 \begin_inset Float figure
 wide false
 sideways false
@@ -3682,7 +3690,7 @@ status collapsed
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
-ligne en regardant un film
+ligne en regardant une vidéo
 \end_layout
 
 \end_inset
@@ -3699,7 +3707,7 @@ ligne en regardant un film
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -3749,7 +3757,7 @@ losange au repos
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -3782,7 +3790,7 @@ status open
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
-losange en regardant un film
+losange en regardant une vidéo
 \end_layout
 
 \end_inset
@@ -3799,7 +3807,7 @@ losange en regardant un film
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -3849,7 +3857,7 @@ râteau au repos
 \begin_inset Float figure
 wide false
 sideways false
-status open
+status collapsed
 
 \begin_layout Plain Layout
 \begin_inset Graphics
@@ -3882,7 +3890,7 @@ status open
 \begin_inset Caption Standard
 
 \begin_layout Plain Layout
-râteau en regardant un film
+râteau en regardant une vidéo
 \end_layout
 
 \end_inset
@@ -3893,6 +3901,15 @@ râteau en regardant un film
 \end_inset
 
 
+\end_layout
+
+\begin_layout Standard
+Le cas le plus intéressant est celui du Râteau ou on voit que lors de la
+ lecture de la vidéo, toutes les méthodes parallèles ont plus de mal a tenir
+ les deadlines, contrairement a l’exécution séquentielle qui elle tient
+ la ligne avec la surcharge, on analyser cette dichotomie par le fait que
+ la lecture d'une vidéo va monopoliser un partie non négligeable des ressources
+ de la machine ce qui néglige une partie des gain de la parallélisation.
 \end_layout
 
 \begin_layout Subsection*
@@ -4017,7 +4034,9 @@ On peut dans un premier temps noter la fiabilité et la constance de l’exécut
  la plus fiable et la plus efficace.
  Pour les autre méthodes on voit qu'HLFET est vraiment a la traîne au niveau
  des performances.
- L'algorithme ETF offre une stabilité, visible nottement
+ L'algorithme ETF offre une stabilité, visible notamment dans l'histogramme
+ du losange et du râteau, cette méthode peut être prometteuse surtout avec
+ un soin porté a son implémentation.
 \end_layout
 
 \begin_layout Part*
